# Django_Scraper

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
articles/: models.py  scraping.py  serializers.py  services.py  tests.py  urls.py  views.py
articles/management/commands/: scrape_articles.py
articles/migrations/: 0001_initial.py
scraper_api/: asgi.py  settings.py  urls.py  wsgi.py
