[project]
name = "django-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.7",
    "djangorestframework>=3.16.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["migrations", ".venv"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E203"]

[tool.ruff.lint.isort]
combine-as-imports = true
